# tualergiahoy.com

./: .gitignore  README.md
backend/: db.sqlite3  pyproject.toml  test_register.py
backend/api/: serializers.py  urls.py  views.py
backend/backend/: settings.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/components/: ToastContainer.vue
frontend/app/composables/: useToast.js
frontend/app/pages/: dashboard.vue  index.vue  login.vue  register.vue  welcome.vue
